--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+
+rails_project_lvl2_development
+rails_project_lvl2_test
