--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Ruby 3.0
-        uses: actions/setup-ruby@v1
+      - name: Set up Ruby 3.1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
 
