add simple form

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,7 @@ require: rubocop-rails
 
 Style/Documentation:
   Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - "config/initializers/*.rb"
