precompile assets for tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         run: make lint
 
       - name: Run Tests
-        run: make test
+        run: bundle exec rake assets:precompile && make test
