--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -4,8 +4,10 @@ one:
   title: MyString
   body: MyText
   creator: one
+  post_category: one
 
 two:
   title: MyString
   body: MyText
   creator: two
+  post_category: two
