add with_comments fixture to post

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -11,3 +11,9 @@ two:
   body: MyText
   creator: two
   post_category: two
+
+with_comments:
+  title: test title
+  body: test body
+  creator: two
+  post_category: two
